<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/labelCadastrar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lbCadastarGan"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textDescricao"/>
        <EditText android:id="@+id/textoDescricao"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textValor"/>
        <EditText android:id="@+id/textoValor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textLocal"/>
        <EditText android:id="@+id/textoLocal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
       <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textData"/>
        <EditText 
            android:id="@+id/textoData"
            android:focusable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
     <Button android:id="@+id/btnCadastrar"
        android:layout_width="fill_parent"
        android:onClick="inserirGanho"
        android:layout_height="wrap_content"
        android:text="@string/btnCadastrar"/>

     

</LinearLayout>