<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/labData"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/textData" />

        <EditText
            android:id="@+id/textoDataIni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:singleLine="true"
            android:text="@string/textDataIni" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/textoDataFim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:singleLine="true"
            android:text="@string/textDataFim" />
    </LinearLayout>

    <Button
        android:id="@+id/buscar"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="listar"
        android:text="Mostrar Saldo" />


    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#336699"
        android:dividerHeight="2sp" >
    </ListView>

</LinearLayout>

