<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e7e7ee"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/labDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="#336699"
            android:dividerHeight="2sp"
            android:paddingLeft="5dip"
            android:text="@string/textDescricao"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/texvDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="#336699"
            android:dividerHeight="2sp"
            android:paddingLeft="5dip"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#F8F8FF"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/labValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:text="@string/textValor"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/texvValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e7e7ee"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/labLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:text="@string/textLocal"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/texvLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#F8F8FF"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/labData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:text="@string/textData"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/texvData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="4dip"
        android:background="#cccccc" />

</LinearLayout>